--- a/config/test-integration-ci/test-ci-team/pr_report_config.yaml
+++ b/config/test-integration-ci/test-ci-team/pr_report_config.yaml
@@ -2,6 +2,7 @@
 # This config uses a small date range and minimal team members for fast testing
 
 project:
+  github_url: "https://github.com"
   github_repo_owner: "konflux-ci"
   github_repo_name: "konflux-ui"
 
