fix: correct path to validate_config.py in config-validation workflow
The config-validation workflow was failing because it referenced
scripts/validate_config.py instead of .github/scripts/validate_config.py.

This caused the workflow to fail before it could validate config-only PRs,
preventing the blocker CI from working properly.

--- a/.github/actions/report-comment/action.yml
+++ b/.github/actions/report-comment/action.yml
@@ -119,7 +119,7 @@ runs:
         echo "  Total TXT files: $TOTAL_TXT"
 
     - name: Comment on PR - Success
-      if: github.event_name == 'pull_request' && success()
+      if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && success()
       continue-on-error: true
       uses: actions/github-script@v7
       with:
