fix: add PR URL to email notifications in CI
Set GITHUB_PR_URL environment variable in CI workflow so that
email notifications include a clickable link to the PR that
triggered the report generation.

Uses GitHub's built-in github.event.pull_request.html_url to
get the PR URL automatically.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -194,6 +194,7 @@ jobs:
           GOOGLE_SPREADSHEET_ID: ${{ secrets.TEST_CI_GOOGLE_SPREADSHEET_ID }}
           SMTP_USER: ${{ secrets.MAIL_APP_USER }}
           SMTP_PASSWORD: ${{ secrets.MAIL_APP_PASSWORD }}
+          GITHUB_PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
           echo "=========================================="
           echo "Running Full Integration Test"
